# SGN-Data-Analytics

./: .env.example  .gitignore  Agents.md  README.md  estructura-bd.sql  pnpm-lock.yaml  pyproject.toml
docs/: api-reference.md  frontend-portal-plan.md  runbook.md
frontend/novitec-portal/: .env.example  README.md  components.json  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/novitec-portal/src/: main.tsx
frontend/novitec-portal/src/styles/: index.css
src/novitec_dwh/: __init__.py
src/novitec_dwh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/novitec_dwh/api/: __init__.py  dependencies.py  exception_handlers.py  main.py  middleware.py  run.py  security.py
src/novitec_dwh/contexts/: __init__.py
src/novitec_dwh/core/: __init__.py  config.py  logging.py
src/novitec_dwh/etl/: __init__.py
src/novitec_dwh/shared/: __init__.py
tests/: __init__.py
tests/api/: test_api_observability.py  test_crm_router.py  test_executive_router.py  test_financial_router.py  test_inventory_router.py  test_operational_router.py  test_organizational_router.py  test_technical_router.py  test_warranty_router.py
tests/contexts/crm/: test_extract_crm_domain.py  test_load_crm_mart.py  test_load_crm_to_staging.py
tests/contexts/executive/: test_build_semantic_views.py
tests/contexts/financial/: test_extract_financial_domain.py  test_filesystem_financial_raw_reader.py  test_load_financial_mart.py  test_load_financial_to_staging.py
(+293 files in other folders)
