[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novitec-dwh"
version = "0.1.0"
description = "Pipeline ETL y API REST para el Data Warehouse de soporte tecnico de Novitec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "mysql-connector-python>=9.4.0,<10.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "polars>=1.31.0,<2.0.0",
    "pandas>=2.3.0,<3.0.0",
]

[project.scripts]
novitec-api = "novitec_dwh.api.run:main"
novitec-etl-financial = "novitec_dwh.etl.orchestration.run_financial_extraction:main"
novitec-load-financial-staging = "novitec_dwh.etl.orchestration.run_financial_staging_load:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
